add category for course and all subtasks
