# src/main/java/com/classroom/core/model/CourseMember.java
@@ -31,6 +31,10 @@ public class CourseMember {
     @JoinColumn(name = "user_id", nullable = false)
     private User user;
 
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "category_id")
+    private CourseCategory category;
+
     @Enumerated(EnumType.STRING)
     @Column(nullable = false, length = 10)
     private CourseRole role;
